flushing out equipment

--- a/src/components/CustomerCarousel.module.css
+++ b/src/components/CustomerCarousel.module.css
@@ -26,6 +26,9 @@
     box-sizing: border-box;
 }
 
+.carousel p{
+    line-height: calc(var(--font-size-1)*1.5);
+}
 .ui{
     position: absolute;
     top: 50%;
