--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -13,7 +13,6 @@
     --serif-font: 'Open Sans', serif;
     --sans-font: 'Open Sans', sans-serif;
 
-
     /* layout */
     --top-nav-a-hpad:40px;
     --top-nav-a-vpad:20px;
@@ -21,14 +20,6 @@
     --card-padding:10px;
     --card-margin:12px;
     --card-shadow:rgba(46,49,52,.4);
-
-    --nav-width:35vw;
-    --content-width:65vw;
-    --content-rightpad:20vw;
-    --content-rightpad-extra:10vw;
-    --header-height:62px;
-    --window-height:768px;
-    --negative-window-height:calc(0 - var(--window-height));
 
     --font-size-0: .875rem; /*14px*/
     --font-size-1: 1rem; /*16px*/
@@ -38,11 +29,8 @@
     --font-size-5: 5.063rem; /*81px*/
     --font-size-6: 7.594rem; /*121.5px*/
 
-    --nav-font-size:calc(20px + (120 - 20) * ((100vw - 700px) / (1600 - 600)));
-    --nav-line-height:calc(24px + (104 - 24) * ((100vw - 600px) / (1600 - 600)));
-    --nav-desktop-closed:calc((var(--window-height) - (var(--header-height) + var(--global-layout-pad-total))));
-    --mobile-breakpoint:900px;
-  
+    --hero-font-size:calc(20px + (72 - 20) * ((100vw - 700px) / (1600 - 600)));
+    --hero-line-height:calc(24px + (80 - 24) * ((100vw - 600px) / (1600 - 600)));
 }
 
 
@@ -64,7 +52,7 @@
         --font-size-6: 5.063rem; /*81px*/
         --font-size-7: 7.594rem; /*121.5px*/
 
-        --nav-font-size: var(--font-size-6);
-        --nav-line-height: calc(var(--font-size-6) * .9);
+        --hero-font-size: var(--font-size-4);
+        --hero-line-height: calc(var(--font-size-4) * 1.4);
     }
 }
