--- a/src/components/Equipment.module.css
+++ b/src/components/Equipment.module.css
@@ -6,12 +6,18 @@
 .equipment li{
     flex-grow:1;
     width:calc(25% - var(--card-margin) * 2);
+    max-height:330px;
+}
+.equipment a{
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 .equipment img{
     max-width: 100%;
-    width: 60%;
+    max-height: 60%;
     display: block;
-    margin: var(--global-module-pad) auto;
+    margin: var(--global-module-pad) auto calc(var(--global-module-pad) / 2);
 }
 .equipment strong{
     display: block;
