--- a/src/components/EventsGrid.module.css
+++ b/src/components/EventsGrid.module.css
@@ -10,10 +10,17 @@
     transition: all .2s cubic-bezier(0.39, 0.575, 0.565, 1);
     width:calc(25% - var(--card-margin) * 2);
     cursor: pointer;
+    overflow: hidden;
 }
 .events li:hover{
     transform:scale(1.05);
     box-shadow: 0px 1px 3px 1px var(--card-shadow);
+}
+.events a{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height:100%;
 }
 .events a:hover{
     color:inherit;
@@ -22,32 +29,35 @@
     max-width: 100%;
     width:100%;
 }
-.content .hover{
+.hover{
     transition: all .2s cubic-bezier(0.39, 0.575, 0.565, 1);
     opacity:0;
     color:var(--color-hilite);
     text-transform:uppercase;
-    margin-top:10px;
+    margin:var(--card-padding);
     font-weight:600;
+    width:calc(100% - var(--card-padding) * 2);
+    text-align: left;
 }
-.events li:hover .content .hover{
+.events li:hover .hover{
     opacity:1;
 }
 .avatar{
     max-width: calc(20% - var(--card-padding));
     float: right;
     margin: var(--card-padding) var(--card-padding) var(--card-padding) 0;
+    border-radius: 5px;
 }
 
 .content{
-    padding: var(--card-padding);
-    width: calc(80% - var(--card-padding) * 2);
-    float: left;
-    text-align: left;
+    flex-grow:2;
 }
 .content p{
-    margin:0;
+padding: var(--card-padding);
+    text-align: left;    margin:0;
+    width: calc(80% - var(--card-padding) * 2);
     font-size:var(--font-size-0);
+    float: left;
 
 }
 .content p strong{
