--- a/src/components/EventsGrid.module.css
+++ b/src/components/EventsGrid.module.css
@@ -17,9 +17,8 @@
     box-shadow: 0px 1px 3px 1px var(--card-shadow);
 }
 .events a{
-    display:flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    display:block;
+    position:relative;
     height:100%;
 }
 .events a:hover{
@@ -38,6 +37,8 @@
     font-weight:600;
     width:calc(100% - var(--card-padding) * 2);
     text-align: left;
+    position: absolute;
+    bottom: 0;
 }
 .events li:hover .hover{
     opacity:1;
@@ -48,9 +49,13 @@
     margin: var(--card-padding) var(--card-padding) var(--card-padding) 0;
     border-radius: 5px;
 }
-
 .content{
-    flex-grow:2;
+    padding-bottom:var(--global-module-pad);
+}
+.content:after{
+    content: "";
+    display: table;
+    clear: both;
 }
 .content p{
 padding: var(--card-padding);
