--- a/src/components/Equipment.module.css
+++ b/src/components/Equipment.module.css
@@ -1,6 +1,7 @@
 .equipmentwrapper{
     text-align: center;
     margin-bottom:var(--global-module-pad);
+    padding: 0 var(--global-element-pad);
 }
 
 .equipment li{
